--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
   "require": {
     "php": "^7.1",
     "ext-json": ">=1.3.7",
-    "guzzlehttp/ringphp": "dev-fork-elasticsearch",
-    "guzzlehttp/streams": "@dev",
+    "guzzlehttp/ringphp": "dev-fork-elasticsearch@dev",
+    "guzzlehttp/streams": "dev-fork-elasticsearch@dev",
     "psr/log": "~1.0"
   },
   "require-dev": {
