--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
   "require": {
     "php": "^7.1",
     "ext-json": ">=1.3.7",
-    "ezimuel/ringphp": "master@dev",
-    "ezimuel/guzzlestreams": "master@dev",
+    "ezimuel/ringphp": "^1.1.2",
     "psr/log": "~1.0"
   },
   "require-dev": {
