--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ before_script:
   - php util/EnsureClusterAlive.php
 
 script:
-  - if [ $TRAVIS_PHP_VERSION != '7.4' ]; then composer run-script phpcs; fi
+  - composer run-script phpcs
   - composer run-script phpstan
   - vendor/bin/phpunit $PHPUNIT_FLAGS
   - vendor/bin/phpunit -c phpunit-integration.xml --group sync $PHPUNIT_FLAGS
