--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ jobs:
 
 env:
   global:
-    - STACK_VERSION="7.x-SNAPSHOT"
+    - STACK_VERSION="8.0.0-SNAPSHOT"
 
 before_install:
   - ./travis/run_es_docker.sh
