--- a/.ci/jobs/elastic+elasticsearch-php+7.9.yml
+++ b/.ci/jobs/elastic+elasticsearch-php+7.9.yml
@@ -1,12 +1,12 @@
 ---
 - job:
-    name: elastic+elasticsearch-php+7.x
-    display-name: 'elastic / elasticsearch-php # 7.x'
-    description: Testing the elasticsearch-php 7.x branch.
+    name: elastic+elasticsearch-php+7.9
+    display-name: 'elastic / elasticsearch-php # 7.9'
+    description: Testing the elasticsearch-php 7.9 branch.
     parameters:
     - string:
         name: branch_specifier
-        default: refs/heads/7.x
+        default: refs/heads/7.9
         description: the Git branch specifier to build (&lt;branchName&gt;, &lt;tagName&gt;,
           &lt;commitId&gt;, etc.)
     triggers:
