--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,7 @@ jobs:
       matrix:
         php-version: [7.1, 7.2, 7.3, 7.4]
         os: [ubuntu-latest]
+        es-version: [7.x-SNAPSHOT]
 
     steps:
     - name: Checkout
@@ -31,10 +32,10 @@ jobs:
         sudo sysctl -w fs.file-max=262144
         sudo sysctl -w vm.max_map_count=262144
 
-    - name: Runs Elasticsearch
+    - name: Runs Elasticsearch ${{ matrix.es-version }}
       uses: elastic/elastic-github-actions/elasticsearch@master
       with:
-        stack-version: 7.x-SNAPSHOT
+        stack-version: ${{ matrix.es-version }}
 
     - name: Install dependencies
       run: |
