--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,18 +25,6 @@ jobs:
       env:
         COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
    
-    - name: Configure sysctl limits
-      run: |
-        sudo swapoff -a
-        sudo sysctl -w vm.swappiness=1
-        sudo sysctl -w fs.file-max=262144
-        sudo sysctl -w vm.max_map_count=262144
-
-    - name: Runs Elasticsearch ${{ matrix.es-version }}
-      uses: elastic/elastic-github-actions/elasticsearch@master
-      with:
-        stack-version: ${{ matrix.es-version }}
-
     - name: Get composer cache directory
       id: composercache
       run: echo "::set-output name=dir::$(composer config cache-files-dir)"
@@ -52,11 +40,31 @@ jobs:
       run: |
         composer install --prefer-dist
 
+    - name: PHP Coding Standards
+      run: |
+        composer run-script phpcs
+
+    - name: PHP Static Analysis Tool
+      run: |
+        composer run-script phpstan
+
     - name: Unit tests
       run: |
         vendor/bin/phpunit -c phpunit.xml.dist
       env:
         TEST_SUITE: oss
+
+    - name: Configure sysctl limits
+      run: |
+        sudo swapoff -a
+        sudo sysctl -w vm.swappiness=1
+        sudo sysctl -w fs.file-max=262144
+        sudo sysctl -w vm.max_map_count=262144
+
+    - name: Runs Elasticsearch ${{ matrix.es-version }}
+      uses: elastic/elastic-github-actions/elasticsearch@master
+      with:
+        stack-version: ${{ matrix.es-version }}
 
     - name: Integration tests
       run: |
