--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,6 +17,8 @@
     <groups>
         <exclude>
             <group>Integration</group>
+            <group>oss</group>
+            <group>xpack</group>
         </exclude>
     </groups>
     <filter>
