--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
   },
   "require-dev": {
     "ext-yaml": "*",
+    "ext-zip": "*",
     "cpliakas/git-wrapper": "~2.0",
     "doctrine/inflector": "^1.3",
     "mockery/mockery": "^1.2",
