--- a/.gitattributes
+++ b/.gitattributes
@@ -1,15 +1,15 @@
 # Files to exclude when creating archive
-/tests export-ignore
 /.ci export-ignore
-/.gitattributes export-ignore
 /.github export-ignore
-/.gitmodules export-ignore
+/tests export-ignore
+/util export-ignore
+/.gitattributes export-ignore
 /.gitignore export-ignore
+/.gitmodules export-ignore
 /.php_cs export-ignore
-/.travis.yml export-ignore
 /.phpstan.neon export-ignore
+/phpunit-integration-tests.xml export-ignore
 /phpunit-integration.xml export-ignore
+/phpunit-yaml-tests.xml
 /phpunit.xml.dist export-ignore
 /ruleset.xml export-ignore
-/travis export-ignore
-/util export-ignore
