--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     }
   ],
   "require": {
-    "php": "^7.1",
+    "php": "^7.1 || ^8.0",
     "ext-json": ">=1.3.7",
     "ezimuel/ringphp": "^1.1.2",
     "psr/log": "~1.0"
@@ -25,7 +25,7 @@
     "doctrine/inflector": "^1.3",
     "mockery/mockery": "^1.2",
     "phpstan/phpstan": "^0.12",
-    "phpunit/phpunit": "^7.5",
+    "phpunit/phpunit": "^7.5 || ^8.5 || ^9.3",
     "squizlabs/php_codesniffer": "^3.4",
     "symfony/finder": "~4.0",
     "symfony/yaml": "~4.0"
