--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   "require-dev": {
     "ext-yaml": "*",
     "ext-zip": "*",
-    "cpliakas/git-wrapper": "~2.0",
+    "cpliakas/git-wrapper": "~2.0 || ~3.0",
     "doctrine/inflector": "^1.3",
     "mockery/mockery": "^1.2",
     "phpstan/phpstan": "^0.12",
