--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,8 @@ util/cache/
 util/*.zip
 util/output/
 
-# Sami docs generator
-/sami.phar
+# Doctum docs generator
+/doctum.phar
 
 # PHPUnit
 /phpunit.xml
@@ -35,6 +35,8 @@ util/output/
 
 # Code coverage
 build
+# Do not ignore Doctum docs built files
+!/docs/build
 
 # Junit test output
 tests/*-junit.xml
